Use simpler List creation syntax